# irminsul_py

./: LICENSE  README.md  pyproject.toml
irminsul/: __init__.py  data_object.py  get_data.py  get_qol.py  get_resources.py  manage_data.py  mode.py  old_qol.py  stats.py  urls.py
irminsul/get_qol/: artifacts.py  characters.py  common.py  food.py  materials.py  weapons.py
irminsul/local/: get_data.py  storage.py
irminsul/objects/: artifact_object.py  character_object.py  common_object.py  data_object.py  food_object.py  material_object.py  weapon_object.py
irminsul/objects/object_methods/: stats.py
irminsul/online/: get_data.py
irminsul/rest/: get_data.py
irminsul/util/: class_util.py  float_calculator.py
test/: test.py
