[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irminsul"
description = "Genshin Impact character data API"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Tobibito-dev", email = "tobibito.dev@gmail.com"}]
dynamic = ["version"]
keywords = ["genshin impact", "genshin", "irminsul"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming LAnguage :: Python",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]

[project-urls]
Homepage = "https://github.com/Tobibito-dev/irminsul_py"
documentation = "https://doc.irminsul.info"
